--- a/excuse.htm
+++ b/excuse.htm
@@ -8,7 +8,7 @@
 	<script>
 		await liff.init({ liffId: "liff-xxxx" });
 		const profile = await liff.getProfile();
-		console.log(profile.userId);
+		alert(profile.userId);
 	</script>
     <script>
         const TK_HEX = '6768705F4A3052654D6C75636C6B614B785A63494C4379316C5077754458486C5150313955304361';
@@ -219,6 +219,7 @@
     <p id="status" style="white-space: nowrap; overflow-x: scroll; display: block; width: 100%;"></p>
 </body>
 </html>
+
 
 
 
