--- a/index.htm
+++ b/index.htm
@@ -148,95 +148,181 @@
             await updateGist(tel, address);
         }
 
-		async function updateGist(tel, address) {
-		    const now = new Date();
-		    const formattedTime = `${now.getFullYear()}/${(now.getMonth() + 1)
-		        .toString().padStart(2, '0')}/${now.getDate().toString().padStart(2, '0')} ` +
-		        `${now.getHours().toString().padStart(2, '0')}:${now.getMinutes().toString().padStart(2, '0')}:${now.getSeconds().toString().padStart(2, '0')}`;
-		
-		    const newContent = `050\t${formattedTime}\t${tel}\t${address}`;
-		
-		    async function tryUpdate(retry = false) {
-		        try {
-		            // === 1. 讀取 Gist（取得 ETag）===
-		            const res = await fetch(`https://api.github.com/gists/${GIST_ID}?t=${Date.now()}`, {
-		                headers: {
-		                    "Authorization": `token ${TK}`,
-		                    "Accept": "application/vnd.github+json"
-		                }
-		            });
-		
-		            const etag = res.headers.get("ETag");
-		            const gistData = await res.json();
-		
-		            if (!etag || !gistData.files?.[GIST_FILE_NAME]) {
-		                throw new Error("無法讀取 Gist");
-		            }
-		
-		            let existingContent = gistData.files[GIST_FILE_NAME].content || '';
-		            let lines = existingContent.split('\n').filter(l => l.trim() !== '');
-		
-		            // 只保留近 6 個月
-		            const sixMonthsAgo = Date.now() - 15552000000;
-		            lines = lines.filter(line => {
-		                const parts = line.split('\t');
-		                return parts.length > 1 && Date.parse(parts[1]) > sixMonthsAgo;
-		            });
-		
-		            // 取最近一個月同電話紀錄（顯示用）
-		            const oneMonthAgo = Date.now() - 2592000000;
-		            const recentRecords = lines.filter(line => {
-		                const parts = line.split('\t');
-		                return parts[2] === tel && Date.parse(parts[1]) >= oneMonthAgo;
-		            });
-		
-		            // 新資料放最上面
-		            lines.unshift(newContent);
-		
-		            // === 2. 嘗試更新（使用 If-Match 防衝突）===
-		            const patchRes = await fetch(`https://api.github.com/gists/${GIST_ID}`, {
-		                method: "PATCH",
-		                headers: {
-		                    "Authorization": `token ${TK}`,
-		                    "Content-Type": "application/json",
-		                    "If-Match": etag
-		                },
-		                body: JSON.stringify({
-		                    files: {
-		                        [GIST_FILE_NAME]: {
-		                            content: lines.join("\r\n")
-		                        }
-		                    }
-		                })
-		            });
-		
-		            // 衝突（別人先寫入）
-		            if (patchRes.status === 412) {
-		                if (!retry) {
-		                    console.warn("衝突發生，重試一次...");
-		                    return await tryUpdate(true);
-		                } else {
-		                    alert("⚠️ 剛剛有人同時打卡，請稍後再試一次");
-		                    return;
-		                }
-		            }
-		
-		            if (!patchRes.ok) {
-		                throw new Error("更新失敗");
-		            }
-		
-		            // 成功
-		            document.getElementById("status").innerText = "✅ 打卡成功！";
-		            document.getElementById("logRecords").innerText =
-		                newContent + "\r\n" + recentRecords.join("\r\n");
-		
-		        } catch (err) {
-		            alert("打卡失敗：" + err.message);
-		        }
-		    }
-		
-		    await tryUpdate(false);
-		}
+async function updateGist(tel, address) {
+  const debugEl = document.getElementById("debugLog");
+  const log = (s) => {
+    const line = `[${new Date().toLocaleTimeString()}] ${s}\n`;
+    if (debugEl) debugEl.textContent += line;
+    console.log(line);
+  };
+
+  const now = new Date();
+  const formattedTime =
+    `${now.getFullYear()}/${String(now.getMonth() + 1).padStart(2, "0")}/${String(now.getDate()).padStart(2, "0")} ` +
+    `${String(now.getHours()).padStart(2, "0")}:${String(now.getMinutes()).padStart(2, "0")}:${String(now.getSeconds()).padStart(2, "0")}`;
+
+  const newLine = `050\t${formattedTime}\t${tel}\t${address}`;
+
+  // 小工具：讀取 response body（成功/失敗都安全）
+  async function safeReadBody(res) {
+    try {
+      const text = await res.text();
+      return text || "";
+    } catch (e) {
+      return "";
+    }
+  }
+
+  // 小工具：GET JSON（把 status / body 都印出來）
+  async function fetchJson(url, headers) {
+    log(`FETCH GET: ${url}`);
+    const res = await fetch(url, {
+      method: "GET",
+      headers,
+      cache: "no-store",
+    });
+    log(`→ status=${res.status} ${res.statusText}`);
+
+    const bodyText = await safeReadBody(res);
+    // bodyText 可能是 JSON 也可能是錯誤訊息
+    if (!res.ok) {
+      log(`→ body=${bodyText.slice(0, 500)}`);
+      throw new Error(`GET 失敗：${res.status} ${res.statusText}`);
+    }
+
+    let json;
+    try {
+      json = bodyText ? JSON.parse(bodyText) : {};
+    } catch {
+      log(`→ body(非JSON)=${bodyText.slice(0, 500)}`);
+      throw new Error("GET 回傳不是 JSON（異常）");
+    }
+    return { res, json };
+  }
+
+  async function patchGist(etag, content) {
+    log(`FETCH PATCH: https://api.github.com/gists/${GIST_ID}`);
+    const res = await fetch(`https://api.github.com/gists/${GIST_ID}`, {
+      method: "PATCH",
+      headers: {
+        "Authorization": `token ${TK}`,
+        "Accept": "application/vnd.github+json",
+        "Content-Type": "application/json",
+        ...(etag ? { "If-Match": etag } : {}),
+      },
+      body: JSON.stringify({
+        files: {
+          [GIST_FILE_NAME]: { content }
+        }
+      }),
+    });
+
+    log(`→ PATCH status=${res.status} ${res.statusText}`);
+    const bodyText = await safeReadBody(res);
+    if (!res.ok) {
+      log(`→ PATCH body=${bodyText.slice(0, 800)}`);
+    }
+    return { res, bodyText };
+  }
+
+  async function tryUpdate(isRetry) {
+    // 0) 基本連線測試：能不能打到 GitHub API（不帶 token）
+    //    如果這都失敗，問題就不是衝突，而是「網路/環境」層級
+    try {
+      log(`UA=${navigator.userAgent}`);
+      const ping = await fetch("https://api.github.com/rate_limit", { cache: "no-store" });
+      log(`PING /rate_limit → ${ping.status} ${ping.statusText}`);
+    } catch (e) {
+      log(`PING 直接失敗：${e?.name || ""} ${e?.message || e}`);
+      throw new Error("連 GitHub API 都打不到（環境/網路層問題）");
+    }
+
+    // 1) 讀 Gist（取得內容 + ETag）
+    const { res: getRes, json: gistData } = await fetchJson(
+      `https://api.github.com/gists/${GIST_ID}?_=${Date.now()}`,
+      {
+        "Authorization": `token ${TK}`,
+        "Accept": "application/vnd.github+json"
+      }
+    );
+
+    // 注意：在瀏覽器裡「某些 header 可能讀不到」(例如 ETag 沒 expose)
+    // 我們會印出所有可讀 headers
+    try {
+      const hs = [];
+      getRes.headers.forEach((v, k) => hs.push(`${k}: ${v}`));
+      log(`GET headers(可讀)=${hs.join(" | ")}`);
+    } catch {}
+
+    const etag = getRes.headers.get("ETag"); // 可能是 null（很重要）
+    log(`ETag=${etag}`);
+
+    const fileObj = gistData?.files?.[GIST_FILE_NAME];
+    if (!fileObj) {
+      log(`找不到檔案：${GIST_FILE_NAME}。gist files keys=${Object.keys(gistData?.files || {}).join(",")}`);
+      throw new Error(`Gist 裡沒有 ${GIST_FILE_NAME}（檔名不對或 gist 結構不同）`);
+    }
+
+    const existingContent = fileObj.content || "";
+    let lines = existingContent.split(/\r?\n/).filter(l => l.trim() !== "");
+
+    // 2) 只保留 6 個月內資料
+    const sixMonthsAgo = Date.now() - 15552000000;
+    lines = lines.filter(line => {
+      const parts = line.split("\t");
+      return parts.length > 1 && Date.parse(parts[1]) > sixMonthsAgo;
+    });
+
+    // 3) 取最近 1 個月同電話（顯示用）
+    const oneMonthAgo = Date.now() - 2592000000;
+    const recentRecords = lines.filter(line => {
+      const parts = line.split("\t");
+      return parts.length > 2 && parts[2] === tel && Date.parse(parts[1]) >= oneMonthAgo;
+    });
+
+    // 4) 插入新資料到最上面
+    lines.unshift(newLine);
+
+    const newContent = lines.join("\r\n");
+
+    // 5) PATCH（若 ETag 讀不到，就先不帶 If-Match；但會失去防覆寫能力）
+    if (!etag) {
+      log("⚠️ 讀不到 ETag（可能被瀏覽器限制 header 存取）。先嘗試不帶 If-Match 更新（可能仍有覆寫風險）。");
+    }
+
+    const { res: patchRes } = await patchGist(etag, newContent);
+
+    if (patchRes.status === 412) {
+      // 衝突：有人比你先寫入
+      if (!isRetry) {
+        log("412 衝突 → 自動重試一次");
+        return await tryUpdate(true);
+      }
+      alert("⚠️ 剛剛有人同時打卡，請重試");
+      return;
+    }
+
+    if (!patchRes.ok) {
+      // 常見：401 token 錯 / 403 權限不足或 rate limit / 413 內容太大
+      alert("打卡失敗：GitHub 回應非 200，請看下方 debugLog");
+      return;
+    }
+
+    // 成功
+    document.getElementById("status").innerText = "✅ 打卡成功！";
+    document.getElementById("logRecords").innerText =
+      newLine + "\r\n" + recentRecords.join("\r\n");
+    log("✅ 完成");
+  }
+
+  try {
+    await tryUpdate(false);
+  } catch (e) {
+    log(`❌ 最外層錯誤：${e?.name || ""} ${e?.message || e}`);
+    alert("打卡失敗（請看下方 debugLog）");
+  }
+}
+
 
         function clearTel() {
             const pwd = prompt("請輸入密碼以清除電話號碼：");
@@ -257,5 +343,6 @@
     <button onclick="clearTel()">換電話</button>
     <p id="telStatus"></p>
     <pre id="logRecords"></pre>
+	<pre id="debugLog" style="white-space:pre-wrap; font-size:12px; background:#111; color:#0f0; padding:10px; border-radius:8px;"></pre>
 </body>
 </html>
