--- a/readtxt.htm
+++ b/readtxt.htm
@@ -187,7 +187,7 @@ function downloadTxt() {
 
   const a = document.createElement("a");
   a.href = url;
-  a.download = `checkin_${new Date().toISOString().slice(0,10)}.txt`;
+  a.download = `amber_${new Date().toISOString().slice(0,10)}.txt`;
   document.body.appendChild(a);
   a.click();
   document.body.removeChild(a);
