--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>打卡系統</title>
 
+<!-- LIFF SDK（用來取 LINE userId） -->
+<script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+
 <style>
 body {
   font-family: sans-serif;
@@ -55,6 +58,9 @@ const GIST_ID = "128158194ad773c072ca111b84286cfb";
 const TK_HEX = "6768705F4A3052654D6C75636C6B614B785A63494C4379316C5077754458486C5150313955304361";
 const REMOVE_PWD = "28814484";
 
+/* ✅ 你要換成自己的 LIFF ID */
+const LIFF_ID = "2008796195-ptiXdSsI";
+
 const ALLOWED_LOCATIONS = [
   { name: "台北公司", lat: 24.986794380363925, lon: 121.5336918999006, radiusM: 200 },
   { name: "台中辦公室", lat: 24.310777911896015, lon: 120.72138183688088, radiusM: 2000 },
@@ -69,15 +75,61 @@ function hexToString(hex) {
 }
 const TOKEN = hexToString(TK_HEX);
 
+/* ================= LINE userId（UUID） ================= */
+
+let lineUserIdCache = null;
+
+function isLineWebView() {
+  return /Line/i.test(navigator.userAgent);
+}
+
+async function getLineUserId() {
+  // 有快取就直接回
+  if (lineUserIdCache) return lineUserIdCache;
+
+  // 不是 LINE 內就不取
+  if (!isLineWebView()) return null;
+
+  // 沒有 liff sdk 或沒設定 liff id
+  if (!window.liff || !LIFF_ID || LIFF_ID === "YOUR_LIFF_ID") return null;
+
+  try {
+    await liff.init({ liffId: LIFF_ID });
+
+    if (!liff.isLoggedIn()) {
+      // 這會跳轉登入，回來後再取
+      liff.login();
+      return null;
+    }
+
+    const profile = await liff.getProfile();
+    lineUserIdCache = profile?.userId || null;
+    return lineUserIdCache;
+  } catch (e) {
+    console.warn("LIFF getProfile failed:", e);
+    return null;
+  }
+}
+
 /* ================= UI ================= */
 
-function updateTitle() {
+async function updateTitle() {
   const tel = localStorage.getItem("tel");
   const title = document.getElementById("title");
+
+  let uuidText = "非 LINE 環境";
+  if (isLineWebView()) uuidText = "取得中...";
+
+  // 嘗試取 LINE userId
+  const uid = await getLineUserId();
+  if (isLineWebView()) {
+    uuidText = uid ? uid : "未登入/未取得";
+  }
+
   if (tel && /^\d{10}$/.test(tel)) {
-    title.textContent = `📍 ${tel} 打卡系統 V2.0`;
+    title.textContent = `📍 ${tel}（${uuidText}）打卡系統 V2.0`;
   } else {
-    title.textContent = "📍 打卡系統 V2.0";
+    title.textContent = `📍 打卡系統 V2.0`;
   }
 }
 
@@ -105,6 +157,7 @@ function getTel() {
     }
     localStorage.setItem("tel", tel);
   }
+  // 更新標題（含 uuid）
   updateTitle();
   return tel;
 }
@@ -232,7 +285,7 @@ async function updateMyFile() {
     document.getElementById("records").textContent = content;
 
   } catch (e) {
-    alert("❌ 打卡失敗：" + e.message);
+    alert("❌ 打卡失敗：" + (e.message || e));
   } finally {
     hideLoading();
   }
@@ -250,8 +303,9 @@ async function loadMyFile() {
   if (file) document.getElementById("records").textContent = file.content;
 }
 
-window.onload = () => {
-  updateTitle();
+window.onload = async () => {
+  // 先嘗試更新一次標題（若在 LINE + 已登入會顯示 uuid）
+  await updateTitle();
   loadMyFile();
 };
 </script>
