--- a/checkin.html
+++ b/checkin.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>打卡系統</title>
 
-<!-- LIFF SDK（用來取 LINE userId） -->
 <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 
 <style>
@@ -52,13 +51,11 @@ pre {
 </style>
 
 <script>
-/* ================= 基本設定 ================= */
+/* ================= 設定 ================= */
 
 const GIST_ID = "128158194ad773c072ca111b84286cfb";
 const TK_HEX = "6768705F4A3052654D6C75636C6B614B785A63494C4379316C5077754458486C5150313955304361";
 const REMOVE_PWD = "28814484";
-
-/* ✅ 你要換成自己的 LIFF ID */
 const LIFF_ID = "2008796195-ptiXdSsI";
 
 const ALLOWED_LOCATIONS = [
@@ -67,67 +64,48 @@ const ALLOWED_LOCATIONS = [
   { name: "后里美光", lat: 24.318140260826873, lon: 120.72406839843525, radiusM: 2000 },
 ];
 
+/* ================= 工具 ================= */
+
 function hexToString(hex) {
-  let str = '';
+  let s = '';
   for (let i = 0; i < hex.length; i += 2)
-    str += String.fromCharCode(parseInt(hex.substr(i, 2), 16));
-  return str;
+    s += String.fromCharCode(parseInt(hex.substr(i, 2), 16));
+  return s;
 }
 const TOKEN = hexToString(TK_HEX);
 
-/* ================= LINE userId（UUID） ================= */
+/* ================= LIFF ================= */
 
-let lineUserIdCache = null;
+let lineUserId = null;
 
-function isLineWebView() {
-  return /Line/i.test(navigator.userAgent);
-}
-
-async function getLineUserId() {
-  // 有快取就直接回
-  if (lineUserIdCache) return lineUserIdCache;
-
-  // 不是 LINE 內就不取
-  if (!isLineWebView()) return null;
-
-  // 沒有 liff sdk 或沒設定 liff id
-  if (!window.liff || !LIFF_ID || LIFF_ID === "YOUR_LIFF_ID") return null;
+async function initLiffOnce() {
+  if (!window.liff) return;
 
   try {
     await liff.init({ liffId: LIFF_ID });
 
-    if (!liff.isLoggedIn()) {
-      // 這會跳轉登入，回來後再取
-      liff.login();
-      return null;
+    if (liff.isLoggedIn()) {
+      const profile = await liff.getProfile();
+      lineUserId = profile?.userId || null;
     }
-
-    const profile = await liff.getProfile();
-    lineUserIdCache = profile?.userId || null;
-    return lineUserIdCache;
   } catch (e) {
-    console.warn("LIFF getProfile failed:", e);
-    return null;
+    console.warn("LIFF init failed:", e);
   }
 }
 
 /* ================= UI ================= */
 
-async function updateTitle() {
+function updateTitle() {
   const tel = localStorage.getItem("tel");
   const title = document.getElementById("title");
 
-  let uuidText = "非 LINE 環境";
-  if (isLineWebView()) uuidText = "取得中...";
-
-  // 嘗試取 LINE userId
-  const uid = await getLineUserId();
-  if (isLineWebView()) {
-    uuidText = uid ? uid : "未登入/未取得";
+  let uidText = "非 LINE 環境";
+  if (window.liff) {
+    uidText = lineUserId ? lineUserId : "未登入";
   }
 
   if (tel && /^\d{10}$/.test(tel)) {
-    title.textContent = `📍 ${tel}（${uuidText}）打卡系統 V2.0`;
+    title.textContent = `📍 ${tel}（${uidText}）打卡系統 V2.0`;
   } else {
     title.textContent = `📍 打卡系統 V2.0`;
   }
@@ -145,19 +123,15 @@ function hideLoading() {
   document.getElementById("btnClear").disabled = false;
 }
 
-/* ================= 基本工具 ================= */
+/* ================= 使用者 ================= */
 
 function getTel() {
   let tel = localStorage.getItem("tel");
   if (!tel || !/^\d{10}$/.test(tel)) {
     tel = prompt("請輸入 10 碼手機號碼：");
-    if (!/^\d{10}$/.test(tel)) {
-      alert("電話格式錯誤");
-      return null;
-    }
+    if (!/^\d{10}$/.test(tel)) return null;
     localStorage.setItem("tel", tel);
   }
-  // 更新標題（含 uuid）
   updateTitle();
   return tel;
 }
@@ -304,17 +278,10 @@ async function loadMyFile() {
 }
 
 window.onload = async () => {
-  try {
-    await liff.init({ liffId: "2008796195-ptiXdSsI" });
-    console.log("LIFF init OK");
-  } catch (e) {
-    alert("LIFF 初始化失敗：" + e.message);
-  }
-
+  await initLiffOnce();
   updateTitle();
   loadMyFile();
 };
-
 </script>
 </head>
 
