--- a/checkin.html
+++ b/checkin.html
@@ -95,21 +95,34 @@ async function initLiffOnce() {
 
 /* ================= UI ================= */
 
-function updateTitle() {
+async function updateTitle() {
   const tel = localStorage.getItem("tel");
   const title = document.getElementById("title");
 
-  let uidText = "非 LINE 環境";
+  let statusText = "非 LINE 環境";
+
   if (window.liff) {
-    uidText = lineUserId ? lineUserId : "未登入";
+    if (!liff.isInClient()) {
+      statusText = "請用 LINE 開啟";
+    } else if (!liff.isLoggedIn()) {
+      statusText = "尚未登入 LINE";
+    } else {
+      try {
+        const profile = await liff.getProfile();
+        statusText = profile.userId || "未知使用者";
+      } catch (e) {
+        statusText = "讀取失敗";
+      }
+    }
   }
 
   if (tel && /^\d{10}$/.test(tel)) {
-    title.textContent = `📍 ${tel}（${uidText}）打卡系統 V2.0`;
+    title.textContent = `📍 ${tel}（${statusText}）打卡系統 V2.0`;
   } else {
     title.textContent = `📍 打卡系統 V2.0`;
   }
 }
+
 
 function showLoading() {
   document.getElementById("loadingOverlay").classList.add("show");
