--- a/checkin.html
+++ b/checkin.html
@@ -303,6 +303,7 @@ window.onload = async () => {
 
 <button id="btnCheckin" onclick="updateMyFile()">打卡</button>
 <button id="btnClear" onclick="clearTel()">換電話</button>
+<button onclick="liff.login()">LINE 登入</button>
 
 <p id="status"></p>
 
