--- a/checkin.html
+++ b/checkin.html
@@ -23,8 +23,6 @@ pre {
   padding: 10px;
   white-space: pre-wrap;
 }
-
-/* loading */
 #loadingOverlay {
   position: fixed;
   inset: 0;
@@ -51,7 +49,7 @@ pre {
 </style>
 
 <script>
-/* ================= 設定 ================= */
+/* ================= 基本設定 ================= */
 
 const GIST_ID = "128158194ad773c072ca111b84286cfb";
 const TK_HEX = "6768705F4A3052654D6C75636C6B614B785A63494C4379316C5077754458486C5150313955304361";
@@ -79,37 +77,22 @@ const TOKEN = hexToString(TK_HEX);
 let lineUserId = null;
 
 async function initLiffOnce() {
-  try {
-    await liff.init({ liffId: LIFF_ID });
-
-    if (liff.isLoggedIn()) {
-      const profile = await liff.getProfile();
-      lineUserId = profile.userId;
-    }
-  } catch (e) {
-    console.warn("LIFF init error:", e);
-  }
-}
-
-function lineLogin() {
-  if (!liff.isLoggedIn()) {
-    liff.login({ redirectUri: location.href });
+  await liff.init({ liffId: LIFF_ID });
+  if (liff.isLoggedIn()) {
+    const profile = await liff.getProfile();
+    lineUserId = profile.userId;
   }
 }
 
 /* ================= UI ================= */
 
-async function updateTitle() {
+function updateTitle() {
   const tel = localStorage.getItem("tel");
   const title = document.getElementById("title");
 
-  let status = "未登入 LINE";
+  let status = liff.isLoggedIn() ? lineUserId : "未登入";
 
-  if (liff.isLoggedIn()) {
-    status = lineUserId || "未知使用者";
-  }
-
-  if (tel && /^\d{10}$/.test(tel)) {
+  if (tel) {
     title.textContent = `📍 ${tel}（${status}）打卡系統 V2.0`;
   } else {
     title.textContent = `📍 打卡系統 V2.0`;
@@ -119,16 +102,14 @@ async function updateTitle() {
 function showLoading() {
   document.getElementById("loadingOverlay").classList.add("show");
   document.getElementById("btnCheckin").disabled = true;
-  document.getElementById("btnClear").disabled = true;
 }
 
 function hideLoading() {
   document.getElementById("loadingOverlay").classList.remove("show");
   document.getElementById("btnCheckin").disabled = false;
-  document.getElementById("btnClear").disabled = false;
 }
 
-/* ================= 使用者 ================= */
+/* ================= TEL ================= */
 
 function getTel() {
   let tel = localStorage.getItem("tel");
@@ -143,18 +124,10 @@ function getTel() {
 
 function clearTel() {
   const pwd = prompt("請輸入管理密碼：");
-  if (pwd !== REMOVE_PWD) {
-    alert("❌ 密碼錯誤");
-    return;
-  }
+  if (pwd !== REMOVE_PWD) return alert("❌ 密碼錯誤");
   localStorage.removeItem("tel");
   alert("✅ 已清除");
-  updateTitle();
   location.reload();
-}
-
-function getFileName(tel) {
-  return `${tel}.txt`;
 }
 
 /* ================= GPS ================= */
@@ -164,29 +137,23 @@ function distance(lat1, lon1, lat2, lon2) {
   const toRad = d => d * Math.PI / 180;
   const dLat = toRad(lat2 - lat1);
   const dLon = toRad(lon2 - lon1);
-  const a =
+  return 2 * R * Math.asin(Math.sqrt(
     Math.sin(dLat / 2) ** 2 +
     Math.cos(toRad(lat1)) * Math.cos(toRad(lat2)) *
-    Math.sin(dLon / 2) ** 2;
-  return R * 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+    Math.sin(dLon / 2) ** 2
+  ));
 }
 
 function findNearestLocation(lat, lon) {
-  let nearest = null;
-  let minDist = Infinity;
-
-  for (const loc of ALLOWED_LOCATIONS) {
-    const d = distance(lat, lon, loc.lat, loc.lon);
-    if (d < minDist) {
-      minDist = d;
-      nearest = loc;
+  let nearest = null, min = Infinity;
+  for (const l of ALLOWED_LOCATIONS) {
+    const d = distance(lat, lon, l.lat, l.lon);
+    if (d < min) {
+      min = d;
+      nearest = l;
     }
   }
-
-  return {
-    name: nearest ? nearest.name : "未知位置",
-    distance: Math.round(minDist)
-  };
+  return { name: nearest.name, distance: Math.round(min) };
 }
 
 /* ================= GitHub ================= */
@@ -211,7 +178,31 @@ async function githubPATCH(payload) {
   });
 }
 
-/* ================= 主流程 ================= */
+/* ================= UID ================= */
+
+function getFileName() {
+  return `${lineUserId}.txt`;
+}
+
+async function loadUIDFile() {
+  const res = await githubGET();
+  if (!res.ok) return false;
+
+  const data = await res.json();
+  const file = data.files[getFileName()];
+  if (!file) return false;
+
+  const first = file.content.split("\n")[0];
+  const parts = first.split("\t");
+
+  if (parts.length >= 3 && /^\d{10}$/.test(parts[2])) {
+    localStorage.setItem("tel", parts[2]);
+    return true;
+  }
+  return false;
+}
+
+/* ================= 打卡 ================= */
 
 async function updateMyFile() {
   if (!getTel()) return;
@@ -226,66 +217,65 @@ async function updateMyFile() {
       })
     );
 
-    const nearest = findNearestLocation(pos.coords.latitude, pos.coords.longitude);
-    const locationText = `${nearest.name} (${nearest.distance}m)`;
-
+    const loc = findNearestLocation(pos.coords.latitude, pos.coords.longitude);
     const now = new Date();
-    const formattedTime =
-      `${now.getFullYear()}/${String(now.getMonth() + 1).padStart(2, '0')}/${String(now.getDate()).padStart(2, '0')} ` +
-      `${String(now.getHours()).padStart(2, '0')}:${String(now.getMinutes()).padStart(2, '0')}:${String(now.getSeconds()).padStart(2, '0')}`;
 
-    const newLine = `050\t${formattedTime}\t${getTel()}\t${locationText}`;
+    const timeStr =
+      `${now.getFullYear()}/${String(now.getMonth()+1).padStart(2,'0')}/${String(now.getDate()).padStart(2,'0')} ` +
+      `${String(now.getHours()).padStart(2,'0')}:${String(now.getMinutes()).padStart(2,'0')}:${String(now.getSeconds()).padStart(2,'0')}`;
+
+    const line = `050\t${timeStr}\t${getTel()}\t${loc.name} (${loc.distance}m)`;
 
     const res = await githubGET();
     const data = await res.json();
-
-    const fileName = getFileName(getTel());
-    const old = data.files[fileName]?.content || "";
+    const old = data.files[getFileName()]?.content || "";
 
     const nowTime = Date.now();
-    const filtered = old.split("\n").filter(line => {
-      const p = line.split("\t");
-      if (p.length < 2) return false;
+    const filtered = old.split("\n").filter(l => {
+      const p = l.split("\t");
+      if (!p[1]) return false;
       const t = Date.parse(p[1]);
-      return !isNaN(t) && (nowTime - t <= 90 * 24 * 60 * 60 * 1000);
+      return !isNaN(t) && (nowTime - t <= 90 * 86400000);
     });
 
-    filtered.unshift(newLine);
+    filtered.unshift(line);
 
-    const content = filtered.join("\r\n");
-
-    const patchRes = await githubPATCH({
-      files: { [fileName]: { content } }
+    await githubPATCH({
+      files: {
+        [getFileName()]: { content: filtered.join("\r\n") }
+      }
     });
-
-    if (!patchRes.ok) throw new Error("寫入失敗");
 
     document.getElementById("status").innerText = "✅ 打卡成功";
-    document.getElementById("records").textContent = content;
+    document.getElementById("records").textContent = filtered.join("\n");
 
   } catch (e) {
-    alert("❌ 打卡失敗：" + (e.message || e));
+    alert("❌ 打卡失敗：" + e);
   } finally {
     hideLoading();
   }
 }
 
-async function loadMyFile() {
-  const tel = getTel();
-  if (!tel) return;
-
-  const res = await githubGET();
-  if (!res.ok) return;
-
-  const data = await res.json();
-  const file = data.files[getFileName(tel)];
-  if (file) document.getElementById("records").textContent = file.content;
-}
+/* ================= 啟動 ================= */
 
 window.onload = async () => {
   await initLiffOnce();
+
+  if (!lineUserId) {
+    alert("請使用 LINE 開啟此頁面");
+    return;
+  }
+
+  const hasUID = await loadUIDFile();
+
+  if (!hasUID && !localStorage.getItem("tel")) {
+    getTel();
+  }
+
+  document.getElementById("btnCheckin").style.display =
+    lineUserId ? "inline-block" : "none";
+
   updateTitle();
-  loadMyFile();
 };
 </script>
 </head>
@@ -296,7 +286,7 @@ window.onload = async () => {
   <div class="spinner"></div>
 </div>
 
-<h2 id="title">📍 打卡系統 V2.0</h2>
+<h2 id="title">📍 打卡系統 V2.1</h2>
 
 <button id="btnCheckin" onclick="updateMyFile()">打卡</button>
 <button id="btnClear" onclick="clearTel()">換電話</button>
