--- a/checkin.html
+++ b/checkin.html
@@ -53,7 +53,6 @@ pre {
 
 const GIST_ID = "128158194ad773c072ca111b84286cfb";
 const TK_HEX = "6768705F4A3052654D6C75636C6B614B785A63494C4379316C5077754458486C5150313955304361";
-const REMOVE_PWD = "28814484";
 const LIFF_ID = "2008796195-ptiXdSsI";
 
 const ALLOWED_LOCATIONS = [
@@ -89,14 +88,11 @@ async function initLiffOnce() {
 function updateTitle() {
   const tel = localStorage.getItem("tel");
   const title = document.getElementById("title");
+  let status = liff.isLoggedIn() ? "LINE已認證" : "未登入";
 
-  let status = liff.isLoggedIn() ? lineUserId : "未登入";
-
-  if (tel) {
-    title.textContent = `📍 ${tel}（${status}）打卡系統 V2.0`;
-  } else {
-    title.textContent = `📍 打卡系統 V2.0`;
-  }
+  title.textContent = tel
+    ? `📍 ${tel}（${status}）打卡系統 V2.1`
+    : `📍 打卡系統 V2.1`;
 }
 
 function showLoading() {
@@ -120,14 +116,6 @@ function getTel() {
   }
   updateTitle();
   return tel;
-}
-
-function clearTel() {
-  const pwd = prompt("請輸入管理密碼：");
-  if (pwd !== REMOVE_PWD) return alert("❌ 密碼錯誤");
-  localStorage.removeItem("tel");
-  alert("✅ 已清除");
-  location.reload();
 }
 
 /* ================= GPS ================= */
@@ -202,6 +190,33 @@ async function loadUIDFile() {
   return false;
 }
 
+/* ================= 讀取紀錄 ================= */
+
+async function loadMyFile() {
+  if (!lineUserId) return;
+
+  try {
+    const res = await githubGET();
+    if (!res.ok) {
+      document.getElementById("records").textContent = "⚠ 無法讀取紀錄";
+      return;
+    }
+
+    const data = await res.json();
+    const file = data.files[getFileName()];
+
+    if (!file || !file.content) {
+      document.getElementById("records").textContent = "尚無打卡紀錄";
+      return;
+    }
+
+    document.getElementById("records").textContent = file.content;
+
+  } catch (err) {
+    document.getElementById("records").textContent = "❌ 讀取失敗";
+  }
+}
+
 /* ================= 打卡 ================= */
 
 async function updateMyFile() {
@@ -260,10 +275,7 @@ async function updateMyFile() {
 
 window.onload = async () => {
   await initLiffOnce();
-  
-  document.getElementById("btnCheckin").style.display =
-    lineUserId ? "inline-block" : "none";
-  
+
   if (!lineUserId) {
     alert("請使用 LINE 開啟此頁面");
     return;
@@ -274,6 +286,9 @@ window.onload = async () => {
   if (!hasUID && !localStorage.getItem("tel")) {
     getTel();
   }
+
+  document.getElementById("btnCheckin").style.display =
+    lineUserId ? "inline-block" : "none";
 
   updateTitle();
   loadMyFile();
@@ -290,7 +305,6 @@ window.onload = async () => {
 <h2 id="title">📍 打卡系統 V2.1</h2>
 
 <button id="btnCheckin" onclick="updateMyFile()">打卡</button>
-<button id="btnClear" onclick="clearTel()">換電話</button>
 
 <p id="status"></p>
 
